--- a/index.html
+++ b/index.html
@@ -65,23 +65,21 @@
             cursor: pointer;
             font-size: 16px;
             transition: background-color 0.3s ease, opacity 0.3s ease;
-            text-decoration: none; /* Remove sublinhado para links */
-            display: inline-block; /* Permite padding e margem como bloco */
-            margin: 5px; /* Espaço entre botões */
+            text-decoration: none;
+            display: inline-block;
+            margin: 5px;
         }
         button:hover, .download-button:hover {
             background-color: #008b3cff;
         }
-         button:disabled {
+        button:disabled {
             background-color: #cccccc;
             cursor: not-allowed;
             opacity: 0.7;
         }
-
         .output-section {
             margin-top: 30px;
         }
-
         #qrcode {
             margin: 20px auto;
             padding: 15px;
@@ -90,29 +88,23 @@
             display: inline-block;
             box-shadow: 0 2px 8px rgba(0, 0, 0, 0.08);
         }
-
         .hidden {
             display: none;
         }
-
         .loading {
             margin-top: 20px;
             font-style: italic;
             color: #777;
         }
-
-         #generateNewBtn {
+        #generateNewBtn {
             background-color: #6c757d;
         }
-
         #generateNewBtn:hover {
             background-color: #5a6268;
         }
-
-         .button-group {
+        .button-group {
             margin-top: 20px;
-         }
-
+        }
     </style>
 </head>
 <body>
@@ -149,9 +141,9 @@
         const qrcodeDiv = document.getElementById('qrcode');
         const loadingMessage = document.getElementById('loadingMessage');
         const generateBtn = document.getElementById('generateBtn');
-        const downloadLink = document.getElementById('downloadLink'); // Referência ao link de download
+        const downloadLink = document.getElementById('downloadLink');
 
-        let qrcodeInstance = null; // Variável para armazenar a instância do QR Code
+        let qrcodeInstance = null;
 
         function gerarQRCode() {
             const url = urlInput.value.trim();
@@ -161,38 +153,81 @@
                 inputSection.classList.add('hidden');
                 generateBtn.disabled = true;
 
-                // Limpa o conteúdo anterior do QR Code
                 qrcodeDiv.innerHTML = '';
-                qrcodeInstance = null; // Reseta a instância anterior
+                qrcodeInstance = null;
 
                 setTimeout(() => {
-                     // Cria uma nova instância do QR Code
                     qrcodeInstance = new QRCode(qrcodeDiv, {
                         text: url,
-                        width: 250,
-                        height: 250,
-                        colorDark : "#000000",
-                        colorLight : "#ffffff",
-                        correctLevel : QRCode.CorrectLevel.H
+                        width: 300,
+                        height: 300,
+                        colorDark: "#000000",
+                        colorLight: "#ffffff",
+                        correctLevel: QRCode.CorrectLevel.H
                     });
 
-                    // Aguarda um pequeno momento para o canvas ser criado pela biblioteca
-                    // (Pode ser necessário um tempo se a geração for complexa,
-                    // mas para URL é geralmente instantâneo)
                     setTimeout(() => {
-                        // Configura o link de download
                         const qrcodeCanvas = qrcodeDiv.querySelector('canvas');
                         if (qrcodeCanvas) {
-                            const imageUrl = qrcodeCanvas.toDataURL("image/png"); // Converte o canvas para Data URL (PNG)
-                            downloadLink.href = imageUrl;
-                            downloadLink.download = 'qrcode_' + Date.now() + '.png'; // Define o nome do arquivo com timestamp
+                            // Criar canvas final
+                            const finalCanvas = document.createElement('canvas');
+                            finalCanvas.width = 300;
+                            finalCanvas.height = 300;
+                            const ctx = finalCanvas.getContext('2d');
+
+                            // Desenhar QR Code
+                            ctx.drawImage(qrcodeCanvas, 0, 0);
+
+                            // Desenhar círculo branco no centro
+                            const centerX = 150;
+                            const centerY = 150;
+                            const circleRadius = 45;
+
+                            ctx.fillStyle = 'white';
+                            ctx.beginPath();
+                            ctx.arc(centerX, centerY, circleRadius, 0, 2 * Math.PI);
+                            ctx.fill();
+
+                            // Carregar e desenhar o brasão SVG
+                            const img = new Image();
+                            img.onload = function() {
+                                const logoSize = 70;
+                                const x = (300 - logoSize) / 2;
+                                const y = (300 - logoSize) / 2;
+
+                                // Desenhar brasão
+                                ctx.drawImage(img, x, y, logoSize, logoSize);
+
+                                // Atualizar download
+                                const imageUrl = finalCanvas.toDataURL("image/png");
+                                downloadLink.href = imageUrl;
+                                downloadLink.download = 'qrcode_' + Date.now() + '.png';
+
+                                // Substituir canvas
+                                qrcodeDiv.innerHTML = '';
+                                qrcodeDiv.appendChild(finalCanvas);
+
+                                loadingMessage.classList.add('hidden');
+                                outputSection.classList.remove('hidden');
+                            };
+
+                            img.onerror = function() {
+                                console.error('Erro ao carregar o brasão');
+                                // Mostrar QR Code com círculo branco mesmo sem o brasão
+                                const imageUrl = finalCanvas.toDataURL("image/png");
+                                downloadLink.href = imageUrl;
+                                downloadLink.download = 'qrcode_' + Date.now() + '.png';
+                                
+                                qrcodeDiv.innerHTML = '';
+                                qrcodeDiv.appendChild(finalCanvas);
+                                
+                                loadingMessage.classList.add('hidden');
+                                outputSection.classList.remove('hidden');
+                            };
+
+                            img.src = './assets/brasao-preto.svg';
                         }
-
-
-                        loadingMessage.classList.add('hidden');
-                        outputSection.classList.remove('hidden');
-                    }, 50); // Pequeno delay adicional para garantir que o canvas esteja pronto
-
+                    }, 100);
                 }, 100);
             } else {
                 alert('Por favor, insira uma URL para gerar o QR Code.');
@@ -203,8 +238,8 @@
         function resetGenerator() {
             urlInput.value = '';
             qrcodeDiv.innerHTML = '';
-            qrcodeInstance = null; // Limpa a instância
-            downloadLink.href = '#'; // Reseta o link de download
+            qrcodeInstance = null;
+            downloadLink.href = '#';
 
             outputSection.classList.add('hidden');
             inputSection.classList.remove('hidden');
@@ -219,7 +254,6 @@
                 gerarQRCode();
             }
         });
-
     </script>
 </body>
 </html>
