Enhance logo presentation with new styling and improved layout

--- a/index.html
+++ b/index.html
@@ -16,6 +16,18 @@
             padding-top: 40px;
             margin: 0;
         }
+        .logo-container {
+            background-color: #ffffff;
+            padding: 20px;
+            border-radius: 12px;
+            box-shadow: 0 3px 10px rgba(0, 0, 0, 0.08);
+            margin-bottom: 20px;
+        }
+        .logo-container img {
+            width: 120px;
+            height: auto;
+            display: block;
+        }
         .container {
             background-color: #ffffff;
             padding: 30px;
@@ -111,8 +123,8 @@
     </style>
 </head>
 <body>
-    <div>
-      <img src="./assets/brasao.png" alt="Logo" style="width: 150px; height: auto; margin-bottom: 20px;">
+    <div class="logo-container">
+      <img src="./assets/brasao.png" alt="Brasão de Pindamonhangaba">
     </div>
     <div class="container">
         <h1>Gerador de QR Code</h1>
